--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
     <section class="home" id="home">
       <div class="home-content">
-        <h4>TASTY AD's</h4>
-        <h1>Lorem, ipsum dolor. <br />Lorem, ipsum.</h1>
+        <h4>Beautiful, sexy, Effective ad's</h4>
+        <h1>People like us, <br />Do things like this</h1>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias
-          laborum ratione dignissimos, quod labore, et alias dicta vitae,
-          tempora eveniet consectetur harum blanditiis.
+          Your most Generous and Insightful work needs help 
+          <br/>
+          finding the people it is meant to serve.
         </p>
         <a href="#" class="button">Know us</a>
       </div>
@@ -69,7 +69,7 @@
       <div class="feature-content">
         <div class="row">
           <div class="row-img">
-            <img src="images/a1.jpg" alt="" />
+            <img src="images/solar.jpg" alt="" />
           </div>
           <h4>Bath</h4>
         </div>
@@ -93,21 +93,21 @@
     <!-- =============================ABOUT====================================================================== -->
     <section class="about">
       <div class="about-img">
-        <img src="images/bath.jpeg" data-aos="fade-up-right" alt="" />
+        <img src="images/tree.png" data-aos="fade-up-right" alt="" />
       </div>
 
 
 
       <div class="about-text" data-aos="fade-up-left">
-        <h5>Lorem ipsum dolor sit.</h5>
-        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <h5>About Us</h5>
+        <h2>Why Us?</h2>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id earum et
-          officia maiores dignissimos, velit accusantium quia in architecto a,
-          incidunt, consequatur voluptatibus placeat laboriosam quaerat! Illum
-          cumque molestias, inventore ipsum in sed sunt aperiam. Repellat quasi
-          ducimus ad qui laudantium ea, quod temporibus, explicabo amet neque
-          nemo laboriosam animi beatae? Libero, atque saepe.
+        The kind of Marketing the Effective kind, is about 
+        understanding our customers world view and desires
+         so we can connect with them. It is focused on being missed when you are gone, on bringing more than the people
+         expect to those who trust us.
+         Contact us today for a free consultation, and let's discuss how we can help you achieve your digital marketing goals.
+          
         </p>
         <div class="button">know more</div>
       </div>
@@ -119,8 +119,8 @@
 
     <section class="about">
       <div class="about-text">
-        <h5>Lorem ipsum dolor sit.</h5>
-        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <h5>solar</h5>
+        <h2>.</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id earum et
           officia maiores dignissimos, velit accusantium quia in architecto a,
@@ -132,7 +132,7 @@
         <div class="button">know more</div>
       </div>
       <div class="about-img">
-        <img src="images/kitchen.jpg" alt="" />
+        <img src="images/solar.jpg" alt="" />
       </div>
     </section>
 
@@ -141,7 +141,7 @@
 
     <section class="about">
       <div class="about-img">
-        <img src="images/gym.jpg" alt="" />
+        <img src="images/body.png" alt="" />
       </div>
       <div class="about-text">
         <h5>Lorem ipsum dolor sit.</h5>
