--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       </section>
 
       <!-- ============================MAPS========================================================================= -->
-      <div class="map" style="padding: 20px">
+      <div class="map">
         <iframe
           class="maps2"
           id="maps2"
