--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
           <br/>
           finding the people it is meant to serve.
         </p>
-        <a href="#" class="button">Know us</a>
+        <!-- <a href="#" class="button">Know us</a> -->
       </div>
     </section>
 
     <!-- =============================FEATURE====================================================================== -->
     <section class="feature">
       <div class="feature-content">
-        <div class="row">
+        <!-- <div class="row">
           <div class="row-img">
             <img src="images/solar.jpg" alt="" />
           </div>
           <h4>Bath</h4>
-        </div>
+        </div> -->
 
         <div class="row">
           <div class="row-img">
@@ -109,7 +109,7 @@
          Contact us today for a free consultation, and let's discuss how we can help you achieve your digital marketing goals.
           
         </p>
-        <div class="button">know more</div>
+        <!-- <div class="button">know more</div> -->
       </div>
     </section>
 
@@ -120,16 +120,15 @@
     <section class="about">
       <div class="about-text">
         <h5>solar</h5>
-        <h2>.</h2>
+        <h2>Elevate Your Solar Business with Our Comprehensive Marketing
+          Services</h2>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id earum et
-          officia maiores dignissimos, velit accusantium quia in architecto a,
-          incidunt, consequatur voluptatibus placeat laboriosam quaerat! Illum
-          cumque molestias, inventore ipsum in sed sunt aperiam. Repellat quasi
-          ducimus ad qui laudantium ea, quod temporibus, explicabo amet neque
-          nemo laboriosam animi beatae? Libero, atque saepe.
+          Upstall offers a range of services designed to elevate your solar
+        business in the market. Whether you're looking to expand your
+        customer base, enhance brand awareness, or stay ahead of the
+        competition, our services can help you achieve your objectives
         </p>
-        <div class="button">know more</div>
+        <!-- <div class="button">know more</div> -->
       </div>
       <div class="about-img">
         <img src="images/solar.jpg" alt="" />
@@ -144,17 +143,15 @@
         <img src="images/body.png" alt="" />
       </div>
       <div class="about-text">
-        <h5>Lorem ipsum dolor sit.</h5>
-        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <h5>GYM</h5>
+        <h2>Elevate Your Gym's Marketing Game</h2>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id earum et
-          officia maiores dignissimos, velit accusantium quia in architecto a,
-          incidunt, consequatur voluptatibus placeat laboriosam quaerat! Illum
-          cumque molestias, inventore ipsum in sed sunt aperiam. Repellat quasi
-          ducimus ad qui laudantium ea, quod temporibus, explicabo amet neque
-          nemo laboriosam animi beatae? Libero, atque saepe.
+          Upstall offers a suite of services crafted to elevate your gym's
+          presence and profitability. Whether you seek to boost membership
+          sales, improve member retention, or establish your gym as a fitness
+          hub in your community, our services can make it happen
         </p>
-        <div class="button">know more</div>
+        <!-- <div class="button">know more</div> -->
       </div>
     </section>
 
@@ -164,14 +161,16 @@
 
 
       <div class="box-content">
-        <h3 class="cardtitle">Lorem, ipsum.</h3>
+        <h3 class="cardtitle">Why Does a Gym Need Aggressive Lead Generation?</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-          deserunt perspiciatis sint dolore, aperiam officia voluptatibus
-          corrupti facilis temporibus eum eligendi provident accusantium
-          assumenda dicta ex rem corporis amet impedit accusamus consectetur id
-          ut repellendus. Quae debitis ad numquam voluptates. Odio possimus,
-          labore voluptatibus quisquam error iusto omnis repellat quis!
+          Let me explain.
+      The fitness industry has become hyper-competitive over the last number of years,
+      and because of that, you may find yourself in competition with a range of different
+      studios in the beginning. And all of them are vying for the largest market share in
+      your local area.
+      So to gain a foothold and grow and improve your business, you need to build that
+      solid membership base from the get-go. That’s what you need to be agressive.
+
         </p>
         <span class="count">1</span>
       </div>
@@ -180,14 +179,12 @@
 
 
       <div class="box-content">
-        <h3 class="cardtitle">Lorem, ipsum.</h3>
+        <h3 class="cardtitle">Why Choose Upstall for Your Solar Marketing Needs?</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-          deserunt perspiciatis sint dolore, aperiam officia voluptatibus
-          corrupti facilis temporibus eum eligendi provident accusantium
-          assumenda dicta ex rem corporis amet impedit accusamus consectetur id
-          ut repellendus. Quae debitis ad numquam voluptates. Odio possimus,
-          labore voluptatibus quisquam error iusto omnis repellat quis!
+          At Upstall, we're not just marketers; we're passionate advocates for
+          a sustainable future. Our team is dedicated to helping solar energy
+          companies succeed by harnessing the power of effective marketing
+          strategies. Here's why you should partner with us
         </p>
         <span class="count">2</span>
       </div>
@@ -218,20 +215,44 @@
 
 
       <div class="about-text">
-        <h5>Lorem ipsum dolor sit.</h5>
-        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <h5>Booking a zoom call</h5>
+        <h2>Book a 15-Minute Zoom Call with Our Marketing Experts</h2>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id earum et
-          officia maiores dignissimos, velit accusantium quia in architecto a,
-          incidunt, consequatur voluptatibus placeat laboriosam quaerat! Illum
-          cumque molestias, inventore ipsum in sed sunt aperiam. Repellat quasi
-          ducimus ad qui laudantium ea, quod temporibus, explicabo amet neque
-          nemo laboriosam animi beatae? Libero, atque saepe.
+          At Upstall, we understand that your time is
+          valuable, and we're here to help you explore how our marketing
+          expertise can benefit your business. Book a quick 15-minute Zoom
+          call with our team to discuss your goals, challenges, and potential
+          strategies for growth. We're excited to connect with you!
+          <br>
+          <br>
+        Booking Form:
+        <br>
+        <br>
+
+        Please fill out the form below to schedule your 15-minute Zoom call:
+        <br>
+        <!-- • Name:
+        <br>
+        • Email:
+        <br>
+        • Phone Number (optional):
+        <br>
+        • Company Name:
+        <br>
+        • Preferred Date and Time for the Call:
+        <br>
+        • Briefly Describe Your Marketing Needs or Questions:
+        <br> -->
+        Confirmation:
+        Once you submit your request, we'll confirm the appointment via
+        email within 48 hours. In case you need to reschedule or
+        have any urgent questions, feel free to contact us at 
+        our given email address or call us at our contact number.
         </p>
-        <div class="button">know more</div>
+        <div class="button">BOOK CALLS</div>
       </div>
       <div class="about-img">
-        <img src="images/bath.jpeg" alt="" />
+        <img src="images/call2.jpg" alt="" />
       </div>
 
 
