--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@
     <div class="box-content">
       <h3 class="cardtitle">Why Choose Upstall for Your Solar Marketing Needs?</h3>
       <p class="small">
-        Demo calls are the essential part of our business  so that we can know each other better and during the demo call we give bonus tips so that the time with you give to us doesn’t get wasted.
+        At Upstall, we're not just marketers; we're passionate advocates for
+        a sustainable future. Our team is dedicated to helping solar energy
+        companies succeed by harnessing the power of effective marketing
+        strategies. Here's why you should partner with us
       </p>
       <span class="count">2</span>
     </div>
@@ -185,12 +188,7 @@
     <div class="box-content">
       <h3 class="cardtitle">why do demo calls with us ? Is there any benefit for us ?</h3>
       <p class="small">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-        deserunt perspiciatis sint dolore, aperiam officia voluptatibus
-        corrupti facilis temporibus eum eligendi provident accusantium
-        assumenda dicta ex rem corporis amet impedit accusamus consectetur id
-        ut repellendus. Quae debitis ad numquam voluptates. Odio possimus,
-        labore voluptatibus quisquam error iusto omnis repellat quis!
+        Demo calls are the essential part of our business  so that we can know each other better and during the demo call we give bonus tips so that the time with you give to us doesn’t get wasted.
       </p>
       <span class="count">3</span>
     </div>
@@ -260,7 +258,7 @@
         <div class=""></div>
       </div>
 
-      <p class="text small">
+      <p class="small">
         Welcome to Upstall. We're thrilled that you're interested in getting in touch with us.
 
         Your privacy is important to us. Your information will be kept confidential and will not be shared with third
