--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 
-  <section class="about">
+  <section class="about reverse">
     <div class="about-text">
       <h5>solar</h5>
       <h2>Elevate Your Solar Business with Our Comprehensive Marketing
@@ -199,7 +199,7 @@
 
   <!-- ==========================ADD CONTACT CALANDER=================================================== -->
 
-  <section class="about call">
+  <section class="about call reverse">
 
 
     <div class="about-text">
