--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </ul>
 
     <div class="header_right">
-      <a href="#">Follow us</a>
-      <a href="#"><i class="ri-instagram-line"></i></a>
-      <a href=""><i class="ri-messenger-line"></i></a>
+      <a>Follow us</a>
+      <a href="https://www.instagram.com/upstall_it/?igshid=OGQ5ZDc2ODk2ZA%3D%3D"><i class="ri-instagram-line"></i></a>
+      <a href="https://www.facebook.com/upstall"><i class="ri-messenger-line"></i></a>
       <a href="#"><i class="ri-telegram-line"></i></a>
       <div class="menu" id="menu"><i class="ri-menu-2-line"></i></div>
     </div>
@@ -248,7 +248,7 @@
 
   <!-- ====================================CONTACT US============================================= -->
 
-  <div class="contact">
+  <div class="contact " style="margin-top: 40px;">
     <div class="contact-bg">
       <h3>Get in touch with us</h3>
       <h2>Contact us</h2>
